--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
 body {
-  padding-top: 50px;
+	padding-top: 50px;
 }
 
-.starter-template {
-  padding: 40px 15px;
-  text-align: center;
+.all{
+	padding: 40px;
+	padding-top: 20px;
+	padding-left: 110px;
+	padding-right: 110px;
+}
+
+#inputComment{
+	min-height: 100px;
+	resize: vertical;
+}
+
+@media screen and (max-width:600px) {
+	.all{
+		padding: 40px;
+		padding-top: 20px;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 }
