--- a/style.css
+++ b/style.css
@@ -14,11 +14,31 @@ body {
 	resize: vertical;
 }
 
+.form{
+	display: inline;
+	margin: 0px;
+}
+
+.forms{
+		display: inline;
+}
+
 @media screen and (max-width:600px) {
 	.all{
 		padding: 40px;
 		padding-top: 20px;
 		padding-left: 10px;
 		padding-right: 10px;
+	}
+
+	.form{
+		display: block;
+		margin: 2px;
+	}
+
+	.forms{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
 	}
 }
